force-app/main/default/objects/Race_Result__c/fields/Grand_Prix__c.field-meta.xml
<CustomField>
    <fullName>Grand_Prix__c</fullName>
    <description>Participated Race</description>
    <inlineHelpText>Participated Race</inlineHelpText>
    <label>Grand Prix</label>
    <referenceTo>Race__c</referenceTo>
    <relationshipLabel>Race Results</relationshipLabel>
    <relationshipName>Race_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>