force-app/main/default/objects/Race_Result__c/fields/Grid__c.field-meta.xml
<CustomField>
    <fullName>Grid__c</fullName>
    <description>Grid (initial) position in current Race</description>
    <inlineHelpText>Grid (initial) position in current Race</inlineHelpText>
    <label>Grid</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>