force-app/main/default/objects/Race_Result__c/fields/Is_Fastest_Lap__c.field-meta.xml
<CustomField>
    <fullName>Is_Fastest_Lap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if Driver has done the fastest lap during the Race</description>
    <inlineHelpText>Shows if Driver has done the fastest lap during the Race</inlineHelpText>
    <label>Is Fastest Lap</label>
    <type>Checkbox</type>
</CustomField>