force-app/main/default/objects/Race_Result__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Position in current Race</description>
    <inlineHelpText>Position in current Race</inlineHelpText>
    <label>Position</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>