force-app/main/default/objects/Race_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grand_Prix__c</columns>
    <columns>Position__c</columns>
    <columns>Racer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>